bloonix-server (0.35) released at 2015-08-XX

    * Fixed: try to prevent ntp issues by calculating the next service check.

bloonix-server (0.34) released at 2015-08-18

    * Fixed: Can't modify non-lvalue subroutine call at Server.pm line 1379.

bloonix-server (0.33) released at 2015-08-18

    * Fixed %preun section in spec file.
    * Moved the creation of user bloonix into the core package.

bloonix-server (0.32) released at 2015-08-15

    * Bloonix::Server dies now if no /usr/sbin/sendmail is found.

bloonix-server (0.31) released at 2015-08-06

    * Heavy changes and code improvements.
    * Kicked sms* and mail* parameter.
    * Re-designed the notification handling.

bloonix-server (0.30) released at 2015-06-16

    * bloonix-update-agent-host-config now checks on a very simple
      way if sysvinit or systemctl must be used to restart the agent.

bloonix-server (0.29) released at 2015-06-16

    * Fixed @@LIBDIR@@ and clean up the wrong directory.

bloonix-server (0.28) released at 2015-06-10

    * Prevent to log FATAL messages with a stack trace if the
      request structure of the agent was invalid.
    * Implemented company.data_retention in bloonix-delete-es-host-data.

bloonix-server (0.27) released at 2015-05-08

    * Improved rest debugging.
    * Fixed uninitialized warnings messages.

bloonix-server (0.26) released at 2015-05-03

    * Removed location caching.

bloonix-server (0.25) released at 2015-04-15

    * Kicked default_locations.

bloonix-server (0.24) released at 2015-03-21

    * ProcManager and FCGI were splittet into 2 modules.
    * A lot of code improvement.

bloonix-server (0.23) released at 2015-03-11

    * Fixed missing function call for Bloonix::SwitchUser in
      bloonix-roll-forward-log.

bloonix-server (0.22) released at 2015-03-10

    * "INACIVE" typo fixed.

bloonix-server (0.21) released at 2015-03-10

    * Service and host actions (active, notification, acknowlegded)
      will now all reported.
